Make sure that new lines are visible in description

--- a/css/main.less
+++ b/css/main.less
@@ -209,6 +209,10 @@ footer {
       padding: 5px 10px 5px 10px;
     }
   }
+
+  .description {
+    white-space: pre-line;
+  }
 }
 
 .communication-icon {
